--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -3,7 +3,7 @@
 <p><strong>Operation:</strong> <%= @quiz.operation %></p>
 <p><strong>Difficulty:</strong> <%= @quiz.difficulty %></p>
 <p><strong>Total questions:</strong> <%= @quiz.total_questions %></p>
-<p><strong>User:</strong> <%= @quiz.user_id %></p>
+#<p><strong>User:</strong> <%= @quiz.user_id %></p>
 <p><strong>Score:</strong> <%= @quiz.score %></p>
 
 <%= link_to "Edit this quiz", edit_quiz_path(@quiz) %> |
