Insecure version: added password field display for demonstration

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,9 +3,9 @@
     <strong>Email:</strong>
     <%= user.email %>
   </p>
-
+<strong>Password:</strong>
+<strong>Password123</strong>
   <p>
-    <strong>Password:</strong>
-    <%= user.password %>
+ 
   </p>
 </div>
